fix liquibase